# belief-propagation-error

./: .gitignore  index.html  pyproject.toml
.github/workflows/: ci.yml
_freeze/notebooks/00_smoke_test/execute-results/: html.json
belief-propagation-error/: key  key.pub
belief-propagation-error/_output/notebooks/: 00_smoke_test.html
belief-propagation-error/_output/notebooks/00_smoke_test_files/libs/bootstrap/: bootstrap-1a58db1a9b44d9a5195431f29128c925.min.css
belief-propagation-error/bp-error/: _quarto.yml  pyproject.toml
belief-propagation-error/bp-error/_freeze/notebooks/00_smoke_test/execute-results/: html.json
belief-propagation-error/bp-error/_output/notebooks/: 00_smoke_test.html
belief-propagation-error/bp-error/notebooks/: 00_smoke_test.qmd
belief-propagation-error/bp-error/src/bp_error/: __init__.py
belief-propagation-error/notebooks/: 00_smoke_test.qmd
belief-propagation-error/tests/: test_smoke.py
bp-error/: .gitignore  _quarto.yml
bp-error/.github/workflows/: ci.yml
bp-error/notebooks/: 00_smoke_test.qmd  notebook on bayes.ipynb
bp-error/notes/: posterior_after_draws.txt
bp-error/src/bp_error/: bayes.py
bp-error/tests/: test_bayes.py  test_smoke.py
notebooks/: perc_log.ipynb  percolation.ipynb  percs_good.ipynb  practice-2.py  practice.ipynb
src/bp_error/: __init__.py  bayes.py  perc-func.py  perc_func.py
tests/: test_bayes.py
