[project]
name = "bp-error"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eon>=1.92",
    "ipykernel>=7.3.0",
    "jax>=0.10.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "quarto>=0.1.0",
]

[project.scripts]
bp-error = "bp_error:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
