[project]
name = "bp-error"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jax[cpu]==0.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "msvc-runtime>=14.44.35112",
    "numpy<2.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy<1.16",
]

[project.scripts]
bp-error = "bp_error:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
